# breakoutc

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  README.md  com_transform2d.h  game.c  game.h  main.c  math_vec2.h  mix_transform2d.c  mix_transform2d.h  sys_draw2d.c  sys_draw2d.h  sys_framerate.h  sys_transform2d.c  sys_transform2d.h
components/: com_camera.h  com_collide.h  com_control_ball.h  com_draw2d.h  com_index.h  com_move.h  com_render.h  com_render_basic.h  com_transform2d.h
materials/: mat.h  mat_basic.c  mat_common.c  mat_common.h
math/: math.h  math_mat2d.c  math_mat2d.h  math_mat4.c  math_vec2.c
meshes/: mesh.h  mesh_cube.c
mixins/: mix.h  mix_camera.c  mix_collide.c  mix_control_ball.c  mix_control_brick.c  mix_control_paddle.c  mix_control_paddle.h  mix_draw2d.c  mix_draw2d.h  mix_move.c  mix_render_basic.c  mix_transform2d.c  mix_transform2d.h
scenes/: scn.h  scn_main.c
systems/: sys.h  sys_collide.c  sys_control_ball.c  sys_control_brick.c  sys_control_paddle.c  sys_control_paddle.h  sys_draw2d.c  sys_draw2d.h  sys_framerate.c  sys_framerate.h  sys_move.c  sys_render.c  sys_transform2d.c  sys_transform2d.h
worlds/: wor.h  wor_main.c
